--- a/floats.css
+++ b/floats.css
@@ -7,9 +7,6 @@
   text-align: center;
 }
 
-body {
-}
-
 header {
   padding: 20px;
   margin-bottom: 20px;
@@ -23,36 +20,36 @@ section {
 
 #left {
   background-color: #666;
-  padding: 20px;
   float: left;
   width: 33.33%;
+  padding: 20px;
 }
 
 #middle {
   background-color: #888;
-  padding: 20px;
   float: left;
   width: 33.33%;
+  padding: 20px;
 }
 
 #right {
   background-color: #666;
-  padding: 20px;
   float: left;
   width: 33.33%;
+  padding: 20px;
   margin-bottom: 20px;
 }
 
 #full {
-  margin: 10px 0;
-  padding: 20px;
-  margin-top: 20px;
-  clear: both;
+  clear: left;
+  height: 140px;
+  padding-top: 10px;
 }
 
 #division {
   padding: 20px;
   background-color: #6ea3da;
+  margin-top: 10px;
 }
 
 aside {
@@ -60,6 +57,9 @@ aside {
   float: left;
   width: 200px;
   height: 100px;
+  padding: 20px;
+  margin-left: 30px;
+  margin-top: 10px;
 }
 
 footer {
